# server/src/main/java/com/javatpoint/controllers/ReservationManagement.java
@@ -12,31 +12,31 @@ import java.util.List;
 @RestController
 public class ReservationManagement {
 
-    @RequestMapping(value = "/createreservation")
+    @RequestMapping(value = "/reservation/createreservation")
     public ResponseEntity<Reservation> createReservation(Reservation bookingInfo) {
         ReservationManagementService service = new ReservationManagementService();
         return ResponseEntity.ok(service.bookingSlot(bookingInfo));
     }
 
-    @RequestMapping(value = "/updatereservation")
+    @RequestMapping(value = "/reservation/updatereservation")
     public ResponseEntity<Reservation> updateReservation(Reservation bookingInfo) {
         ReservationManagementService service = new ReservationManagementService();
         return ResponseEntity.ok(service.updateSlot(bookingInfo));
     }
 
-    @RequestMapping(value = "/deletereservation")
+    @RequestMapping(value = "/reservation/deletereservation")
     public ResponseEntity<Integer> deleteReservation(Reservation bookingInfo) {
         ReservationManagementService service = new ReservationManagementService();
         return ResponseEntity.ok(service.deleteReservation(bookingInfo));
     }
 
-    @RequestMapping(value = "/showreservation")
+    @RequestMapping(value = "/reservation/showreservation")
     public ResponseEntity<List<Reservation>> showReservation() {
         ReservationManagementService service = new ReservationManagementService();
         return ResponseEntity.ok(service.showBookingInfo());
     }
 
-    @RequestMapping(value = "/showreservationbycriteria")
+    @RequestMapping(value = "/reservation/showreservationbycriteria")
     public ResponseEntity<List<Reservation>> showreservationbycriteria(SearchInfo searchInfo) {
         ReservationManagementService service = new ReservationManagementService();
         return ResponseEntity.ok(service.showBookingInfo(searchInfo));
